Minor change to service method output